[gd_scene load_steps=23 format=3 uid="uid://uf1qp4uner6l"]

[ext_resource type="Texture2D" uid="uid://bo3gcjf872qjx" path="res://src/graphics/characters/niko.png" id="1_ayjsn"]
[ext_resource type="Script" uid="uid://dww2228m2sj22" path="res://src/characters/niko.gd" id="1_fstj6"]
[ext_resource type="Texture2D" uid="uid://bcr1yrjl2x8o1" path="res://src/graphics/lightmaps/niko.png" id="3_k3bl3"]
[ext_resource type="PackedScene" uid="uid://dne3s6qipaljp" path="res://src/misc/sound_effect.tscn" id="4_a7rrs"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_k3bl3"]
blend_mode = 1
light_mode = 1

[sub_resource type="Animation" id="Animation_gc60h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_46fgu"]
resource_name = "elevator_shake"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.251173, 0.553512, 0.739566, 0.972134, 1.1954, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(59.305, 0), Vector2(-12.195, 0), Vector2(67.145, 0), Vector2(6.33, 0), Vector2(42.085, 0), Vector2(-18.84, 0), Vector2(59.305, 0)]
}

[sub_resource type="Animation" id="Animation_yqu3f"]
resource_name = "elevator_shake_end"
length = 0.2465
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.246),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(59.305, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ufb4i"]
resource_name = "elevator_shake_start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.29071, 0.558441, 0.807011, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-27.64, 0), Vector2(93.495, 0), Vector2(-11.755, 0), Vector2(59.305, 0)]
}

[sub_resource type="Animation" id="Animation_1toro"]
resource_name = "scale"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4.5, 4.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gc60h"]
_data = {
&"RESET": SubResource("Animation_gc60h"),
&"elevator_shake": SubResource("Animation_46fgu"),
&"elevator_shake_end": SubResource("Animation_yqu3f"),
&"elevator_shake_start": SubResource("Animation_ufb4i"),
&"scale": SubResource("Animation_1toro")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fstj6"]
size = Vector2(37.3333, 17.3333)

[sub_resource type="Animation" id="Animation_k3bl3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Niko:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ygqey"]
resource_name = "idle_down"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Niko:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5syv1"]
resource_name = "idle_left"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Niko:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_5rxce"]
resource_name = "idle_right"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Niko:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_aqpew"]
resource_name = "idle_up"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Niko:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_jo2od"]
resource_name = "move_down"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Niko:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 0]
}

[sub_resource type="Animation" id="Animation_fstj6"]
resource_name = "move_left"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Niko:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_a7rrs"]
resource_name = "move_right"
length = 0.25
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Niko:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 8]
}

[sub_resource type="Animation" id="Animation_jndxe"]
resource_name = "move_up"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Niko:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 12, 15, 14]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a7rrs"]
_data = {
&"RESET": SubResource("Animation_k3bl3"),
&"idle_down": SubResource("Animation_ygqey"),
&"idle_left": SubResource("Animation_5syv1"),
&"idle_right": SubResource("Animation_5rxce"),
&"idle_up": SubResource("Animation_aqpew"),
&"move_down": SubResource("Animation_jo2od"),
&"move_left": SubResource("Animation_fstj6"),
&"move_right": SubResource("Animation_a7rrs"),
&"move_up": SubResource("Animation_jndxe")
}

[node name="Niko" type="CharacterBody2D"]
scale = Vector2(0.75, 0.75)
script = ExtResource("1_fstj6")

[node name="Niko" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("1_ayjsn")
hframes = 4
vframes = 4

[node name="NikoLight" type="Sprite2D" parent="."]
light_mask = 0
material = SubResource("CanvasItemMaterial_k3bl3")
position = Vector2(0, -32)
texture = ExtResource("3_k3bl3")
hframes = 4
vframes = 4

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]
libraries = {
&"": SubResource("AnimationLibrary_gc60h")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.17891e-07, -7.33333)
shape = SubResource("RectangleShape2D_fstj6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_a7rrs")
}

[node name="Timer_Footstep" type="Timer" parent="."]
wait_time = 0.333
one_shot = true

[node name="SoundEffect_Footstep" parent="." instance=ExtResource("4_a7rrs")]
